# MazeBench

./: .gitignore  AGENTS.md  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  pyproject.toml  server.js
.claude/: launch.json
bench/: analyze-profile.js  bench.js  diff-engines.js  levels.js  profile-level.js  solve-all-levels.js
docs/: maze-level-format.md  packaging.md  prime-verifiers-plan.md
mazebench_cli/: __init__.py
public/: agent-run.js  agent.js  author-play-data.js  author-shell.js  author-solver-worker.js  author-theme.css  author.js  build.js  flyover.js  level-preview.js  local-site.css  maze-engine.js  maze-solver.js  play-core.js  play-gameplay.js  play-movement.js  play-render-actors.js  play-render-compositor.js  play-render-terrain.js  play-render-three.js  play-render.js  play-theme.css  play-world-transitions.js  play.js  styles.css  train.js  world-map.js
scripts/: build-python-runtime.js  codex-play.js  maze-agent-local.js  maze-bridge.js  maze-certify-prime-harnesses.py  maze-codex-api.js  maze-export-replay.js  maze-mcp-server.js  maze-model-repl.js  maze-prime-harness-catalog.py  maze-prime-live-eval.py  maze-prime-run.js  maze-render-frame.js  maze-terminal.js  sync-runtime.js
server/: agent-runs.js  app.js  build-worlds-local.js  maze-levels.js  maze-world-map.js  page-chrome.js  pages.js  remote.js  router.js  solver-exports.js  token-usage.js
shared/: default-world-template.js
tests/: agent-launch-transition.test.js  agent-queue.test.js  agent-run-branching.test.js  agent-run-config-source.test.js  (+32 more)
(+440 files in other folders)
