[project]
name = "maze-bench"
version = "0.1.0"
description = "Browser maze game and Prime Intellect verifier experiments."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"
dependencies = [
    "harnesses @ git+https://github.com/PrimeIntellect-ai/verifiers.git@feat/nano-as-v1#subdirectory=packages/harnesses",
    "tasksets @ git+https://github.com/PrimeIntellect-ai/verifiers.git@feat/nano-as-v1#subdirectory=packages/tasksets",
    "verifiers @ git+https://github.com/PrimeIntellect-ai/verifiers.git@feat/nano-as-v1",
]
